--- a/reloj/reloj.css
+++ b/reloj/reloj.css
@@ -1,5 +1,10 @@
-@import url(//db.onlinewebfonts.com/c/84cb021d5f9af287ffff84b61beef6dc?family=clockicons);
+@font-face {
+    font-family: clockicons;
+    src: url('clockicons.ttf') format('truetype');
+  }
+
 h1{
-font-family: 'clockicons', sans-serif;
-color: blue;
+    font-family: 'clockicons', sans-serif;
+    color: rgb(255, 81, 0);
+    font-weight: normal;
 }
