--- a/css/reloj.css
+++ b/css/reloj.css
@@ -23,3 +23,8 @@ text-align: center;}
 .alarma{
   background-color: rgb(19, 19, 19);
 }
+------------------modo---------
+.modo{
+ background-color: 177, 175, 175 ;
+ font-size:
+}
