--- a/css/reloj.css
+++ b/css/reloj.css
@@ -1,30 +1,17 @@
-@font-face {
-    font-family: clockicons;
-    src: url('/fonts/clockicons.ttf') format('truetype');
-  }
-
-h1{
-    font-family: 'clockicons', sans-serif;
-    color: rgb(248, 150, 50);
-    font-weight: normal;
-}
 .alar{ font-family: normal;
 }
 .hora{
   font-family: normal;
 } 
-body{ background-color: black;
-align-items: center;
-text-align: center;}
 
 #horaActual{
   font-size: 100px;
+  font-weight: normal;
 }
-.alarma{
+
+#hfin, #contador {
+  font-weight: normal;
+}
+/*.alarma{
   background-color: rgb(19, 19, 19);
-}
-------------------modo---------
-.modo{
- background-color: 177, 175, 175 ;
- font-size:
-}
+}*/
