--- a/css/ruleta.css
+++ b/css/ruleta.css
@@ -16,9 +16,9 @@ canvas{
 
   
   .btn-girar {
-    position: absolute;
+    /*position: absolute;
     top: 50%;
-    left: 50%;
+    left: 50%;*/
     transform: translate(-50%, -50%);
     font-size: 20px;
     padding: 10px 20px;
